[GSM is Greg Sabino Mullane <greg@endpoint.com> <greg@turnstep.com> ]

4.0.2

  - Add the name of the database to the install choices, as some systems 
    have mismatched names (BSD's 'pgsql' user) [Vilem Kebrt]

  - Allow "foo*", "*foo", and "*foo*" wildcard format in bucardo_ctl 
    when specifying syncs, e.g. bucardo_ctl kick ABC* [GSM]

  - Allow special cases for bucardo_ctl kick: "all [synctype] [active]" [GSM]

  - Prohibit syncs from having names reserved for synctypes. [GSM]

  - Add --verbose option to 'bucardo_ctl list syncs' to show tables [GSM]

  - Clear out stale q entries on startup, created when a kid was hit with a 
    kill -9. This was causing Bucardo to think the q slot was still active. [GSM]

  - Change validate_sync notice to LOG [GSM]

  - Allow name changes for syncs, herds, dbs, dbgroups [GSM]

  - Allow filtering of 'bucardo_ctl list syncs' by synctype [GSM]

  - Allow 'bucardo_ctl add sync tables=...' to work with schema.table format [GSM]

  - Allow multiple items to be changed at one time with 'bucardo_ctl update item' [GSM]

  - Fix cases where we were not quoting the UNLISTEN names [GSM]

4.0.1 September 8, 2009

  - Fix to allow "add all tables db=foo" to work as expected. [GSM]

  - Set audit_pid to be off by default. [GSM]

  - Fix broken WHERE clause inside bucardo_ctl for "add table" [GSM]

4.0.0 September 7, 2009

New features:

  - Add support for multi-column primary keys. Thanks to Backcountry.com. [GSM]

  - Add new 'onetimecopy' attribute to sync table, to allow recreation on 
    demand of pushdelta tables on slaves via COPY. [GSM]

  - Support for replication after TRUNCATE. This will only work on 
    Postgres version 8.4 and higher, and only pushdelta syncs. [GSM]

  - Add log_conflict_details to allow logging of conflict information 
    to a separate file. [Adam Wendt]

  - Add 'maxkicks' and 'lifetime' to syncs to force restart of controller 
    and kids after a certain number of kicks or time. [Josh Tolley]